[project]
name = "agents-u-cash"
version = "0.1.0"
description = "Zero-dependency Python client for the agents.u.cash 402 Online Protocol API — non-custodial agent payments (buy + sell)."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "U.CASH Pay" }]
keywords = ["agents.u.cash", "x402", "402", "payments", "crypto", "non-custodial", "ai-agents"]

[project.urls]
Homepage = "https://agents.u.cash"
Repository = "https://github.com/ageesen/pay-u-cash"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agents_u_cash"]
